docs: define milestone v0.4.0 requirements (17 requirements)